chore: remove transations endpoint and components
