# apps/api/src/repositories/index.ts
@@ -2,7 +2,6 @@ export * from "./daoMetricsDayBucket";
 export * from "./last-update";
 export * from "./drizzle";
 export * from "./proposals-activity";
-export * from "./transactions";
 export * from "./voting-power";
 export * from "./token";
 export * from "./account-balance";
